- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.14.2, 5.15.2
- 
        96e9c8cc8aae718942f79ac98e775f06501b0e25 (qt/qtbase/dev) 683b673c501da1cef17b8c74e30ed74a37c7d22b (qt/tqtc-qtbase/tqtc/lts-5.15) fa2efb8b3577c69fee305c0d74f6996bbf84bd7a (qt/qtbase/6.0)
Menu item Does not show correctly after applying the stylesheet below:
QMenu::setStyleSheet("QMenu::item{ padding: 2px 25px 2px 28px; }");
If there is one menu item with an icon or checked flag, all the item texts will not be vertically aligned. Seeing the attached screenshot and code example.
It seems to work fine with 5.14.0 and broken after this release.
- relates to
- 
                    QTBUG-86754 [Reg 5.12.4-> 5.12.5]Action text overlaps the shortcut in menu when padding is used -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-90242 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 330178,2 | Correct item indent in checkable menus in stylesheet style | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 330717,2 | Correct item indent in checkable menus in stylesheet style | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 330718,2 | Correct item indent in checkable menus in stylesheet style | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |